--- a/tech_help/templates/articles/article_detail.html
+++ b/tech_help/templates/articles/article_detail.html
@@ -3,7 +3,7 @@
 {% block title %}Tech Help - {{ article.title }} {% endblock %}
 
 {% block content %}
-<div class="relative min-h-[500px] flex items-center">
+<div class="relative min-h-[200px] flex items-center">
     <!-- Фоновое изображение -->
     <div class="absolute inset-0">
         {% if article.image %}
@@ -55,7 +55,7 @@
     </div>
 </div>
 
-<div class="max-w-4xl mx-auto mt-12 pt-8 border-t border-slate-700">
+<div class="max-w-4xl mx-auto pt-8 border-t border-slate-700">
 
 <!-- Основной контент статьи -->
 <div class="container mx-auto px-4 py-12 border-t border-slate-700 bg-black bg-opacity-60 rounded-lg">
