--- a/tech_help/templates/base.html
+++ b/tech_help/templates/base.html
@@ -17,8 +17,8 @@
 </head>
 <body class="flex flex-col min-h-screen bg-slate-900">
     <nav class="bg-slate-800 border-b border-slate-700">
-        <div class="max-w-7xl mx-auto px-4">
-            <div class="flex justify-between h-16">
+        <div class="px-8 mx-auto px-4">
+            <div class="flex justify-between">
                 <!-- Логотип слева -->  
                 <a href="/" class="highlight flex items-center text-xl font-bold text-blue-400">
                     Tech Help
