--- a/tech_help/templates/devices/device_list.html
+++ b/tech_help/templates/devices/device_list.html
@@ -3,9 +3,9 @@
 {% block title %}Tech Help - Устройства{% endblock %}
 
 {% block content %}
-<div class="container mx-auto px-4 py-8">
+<div class="container mx-auto px-0 py-8">
     <!-- Заголовок и кнопки управления -->
-    <div class="flex justify-between items-center mb-8">
+    <div class="flex justify-between mb-8">
         <h1 class="text-3xl font-bold text-white">Устройства</h1>
         {% if user.is_staff %}
         <div class="flex gap-4">
