--- a/tech_help/devices/templates/devices/device_detail.html
+++ b/tech_help/devices/templates/devices/device_detail.html
@@ -80,9 +80,9 @@
                         <div class="flex items-center gap-2">
                             <span class="text-gray-300">{{ spec.field.name }}</span>
                             {% if spec.field.description %}
-                            <button type="button" 
+                            <button type="button"
                                     class="text-gray-400 hover:text-gray-300"
-                                    title="{{ spec.field.description }}">
+                                    data-tooltip="{{ spec.field.description }}">
                                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
                                           d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -106,7 +106,6 @@
         </div>
     </div>
 </div>
-
 <script>
     const swiper = new Swiper('.device-carousel', {
         slidesPerView: 1,
